--- a/registro_Usuario.html
+++ b/registro_Usuario.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html class="bg-slate-900" lang="en">
+<html class="bg-gradient-to-r from-indigo-900 to-slate-900" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema POS: Citerium</title>
+    <title>Registrarse - Sistema POS: Citerium</title>
     <link rel="icon" type="image/png" href="/img/favicons/favicon.png">
     <link rel="stylesheet" href="css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,11 +13,11 @@
 </head>
 <body>
     <main>
-        <form action="#" method="post">
-            <div class="min-w-screen min-h-screen bg-gray-900 flex items-center justify-center px-5 py-5">
+        <form action="home_SistemaPos.html" method="GET">
+            <div class="min-w-screen min-h-screen bg-gradient-to-r from-slate-900 to-indigo-900 flex items-center justify-center px-5 py-5">
                 <div class="bg-gray-100 text-gray-500 rounded-3xl shadow-xl w-full overflow-hidden" style="max-width:1000px">
                     <div class="md:flex w-full">
-                        <div class="bg-sky-800 hidden md:block w-1/2 py-10 px-10">
+                        <div class="bg-gradient-to-r from-sky-800 to-cyan-600 hidden md:block w-1/2 py-10 px-10">
                             <img class="mt-20" src="img/Registro.svg" alt="imagen-registro">
                         </div>
                         <div class="w-full md:w-1/2 py-10 px-5 md:px-10">
