--- a/homeVentas_SistemaPos.html
+++ b/homeVentas_SistemaPos.html
@@ -56,7 +56,7 @@
 
     <nav class="bg-gradient-to-r from-slate-900 to-indigo-900 ml-[-100%] fixed z-10 top-0 pb-3 px-6 w-full flex flex-col justify-between h-screen border-r transition duration-300 md:w-4/12 lg:ml-0 lg:w-[25%] xl:w-[20%] 2xl:w-[15%] overflow-y-auto">
         <aside>
-            <div>
+            <div class="pb-3">
                 <div class="-mx-6 px-6 pt-4">
                     <a href="#" title="home">
                         <img src="img/logo.png" class="w-32 mx-auto" alt="logo citerium">
@@ -71,13 +71,12 @@
         
                 <ul class="space-y-2 tracking-wide mt-8">
                     <li>
-                        <a href="#" aria-label="dashboard" class="relative px-4 py-3 flex items-center space-x-4 rounded-xl text-white bg-gradient-to-r from-sky-600 to-indigo-400">
-                            <svg class="-ml-1 h-6 w-6" viewBox="0 0 24 24" fill="none">
-                                <path d="M6 8a2 2 0 0 1 2-2h1a2 2 0 0 1 2 2v1a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2V8ZM6 15a2 2 0 0 1 2-2h1a2 2 0 0 1 2 2v1a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2v-1Z" class="fill-current text-cyan-400 dark:fill-slate-600"></path>
-                                <path d="M13 8a2 2 0 0 1 2-2h1a2 2 0 0 1 2 2v1a2 2 0 0 1-2 2h-1a2 2 0 0 1-2-2V8Z" class="fill-current text-cyan-200 group-hover:text-cyan-300"></path>
-                                <path d="M13 15a2 2 0 0 1 2-2h1a2 2 0 0 1 2 2v1a2 2 0 0 1-2 2h-1a2 2 0 0 1-2-2v-1Z" class="fill-current group-hover:text-sky-300"></path>
+                        <a href="home_SistemaPos.html" class="px-4 py-3 flex items-center space-x-4 rounded-md text-white group">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                                <path class="fill-current text-gray-300 group-hover:text-cyan-300" fill-rule="evenodd" d="M2 6a2 2 0 012-2h4l2 2h4a2 2 0 012 2v1H8a3 3 0 00-3 3v1.5a1.5 1.5 0 01-3 0V6z" clip-rule="evenodd" />
+                                <path class="fill-current text-gray-600 group-hover:text-cyan-600" d="M6 12a2 2 0 012-2h8a2 2 0 012 2v2a2 2 0 01-2 2H2h2a2 2 0 002-2v-2z" />
                             </svg>
-                            <span class="-mr-1 font-medium">Citerium</span>
+                            <span class="group-hover:text-indigo-400">Citerium</span>
                         </a>
                     </li>
                     <li>
@@ -92,19 +91,20 @@
                     <li>
                         <a href="homeProducto_SistemaPos.html" class="px-4 py-3 flex items-center space-x-4 rounded-md text-white group">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-                                <path class="fill-current text-gray-600 group-hover:text-cyan-600" fill-rule="evenodd" d="M2 5a2 2 0 012-2h8a2 2 0 012 2v10a2 2 0 002 2H4a2 2 0 01-2-2V5zm3 1h6v4H5V6zm6 6H5v2h6v-2z" clip-rule="evenodd" />
-                                <path class="fill-current text-gray-300 group-hover:text-cyan-300" d="M15 7h1a2 2 0 012 2v5.5a1.5 1.5 0 01-3 0V7z" />
-                            </svg>
-                            <span class="group-hover:text-indigo-400">Administrar productos</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="homeVentas_SistemaPos.html" class="px-4 py-3 pb-5 flex items-center space-x-4 rounded-md text-white group">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                                 <path class="fill-current text-gray-600 group-hover:text-cyan-600" d="M2 10a8 8 0 018-8v8h8a8 8 0 11-16 0z" />
                                 <path class="fill-current text-gray-300 group-hover:text-cyan-300" d="M12 2.252A8.014 8.014 0 0117.748 8H12V2.252z" />
                             </svg>
-                            <span class="group-hover:text-indigo-400">Ventas</span>
+                            <span class="group-hover:text-indigo-400">Administrar Productos</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" aria-label="dashboard" class="relative px-4 py-3 flex items-center space-x-4 rounded-xl text-white bg-gradient-to-r from-sky-600 to-indigo-400">
+                            <svg class="-ml-1 h-6 w-6" viewBox="0 0 24 24" fill="none">
+                                <path d="M6 8a2 2 0 0 1 2-2h1a2 2 0 0 1 2 2v1a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2V8ZM6 15a2 2 0 0 1 2-2h1a2 2 0 0 1 2 2v1a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2v-1Z" class="fill-current text-cyan-400 dark:fill-slate-600"></path>
+                                <path d="M13 8a2 2 0 0 1 2-2h1a2 2 0 0 1 2 2v1a2 2 0 0 1-2 2h-1a2 2 0 0 1-2-2V8Z" class="fill-current text-cyan-200 group-hover:text-cyan-300"></path>
+                                <path d="M13 15a2 2 0 0 1 2-2h1a2 2 0 0 1 2 2v1a2 2 0 0 1-2 2h-1a2 2 0 0 1-2-2v-1Z" class="fill-current group-hover:text-sky-300"></path>
+                            </svg>
+                            <span class="-mr-1 font-medium">Ventas</span>
                         </a>
                     </li>
                 </ul>
@@ -123,24 +123,64 @@
 
     <main class="ml-auto mb-6 lg:w-[75%] xl:w-[80%] 2xl:w-[85%]">
         <div class="px-6 pt-6 2xl:container">
-            <div class=" md:grid-cols-1 lg:grid-cols-1">
-                <div class="md:col-span-1 lg:col-span-1">
-                    <div class="h-full w-5/6 m-auto py-8 px-6 text-center text-2xl text-slate-950 rounded-xl border border-gray-200 bg-white">
-                        <h1>Bienvenidos al sistema POS: Citerium</h1>
+            <div class="grid gap-4 md:grid-cols-1 lg:grid-cols-1">
+                <div class="md:col-span-1 lg:col-span-1 overflow-auto" >
+                    <div class="h-full w-11/12 m-auto py-8 px-6 text-center text-gray-600 rounded-xl border border-gray-200 bg-gradient-to-r from-indigo-100 to-cyan-100 overflow-auto">
+                        <h1 class="text-2xl mb-6 text-teal-800">Productos en caja</h1>
+                        <table class="listaProductos table-auto w-full">
+                            <thead>
+                              <tr>
+                                <th class="px-4 py-2 bg-teal-400">Nombre</th>
+                                <th class="px-4 py-2 bg-teal-400">Código</th>
+                                <th class="px-4 py-2 bg-teal-400">Cantidad</th>
+                                <th class="px-4 py-2 bg-teal-400">Precio</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr>
+                                <td class="border px-4 py-2">Producto 1</td>
+                                <td class="border px-4 py-2">123</td>
+                                <td class="border px-4 py-2">3</td>
+                                <td class="border px-4 py-2">$ 1000</td>
+                              </tr>
+                              <tr>
+                                <td class="border px-4 py-2">Producto 2</td>
+                                <td class="border px-4 py-2">456</td>
+                                <td class="border px-4 py-2">2</td>
+                                <td class="border px-4 py-2">$ 50</td>
+                              </tr>
+                              
+                            </tbody>
+                          </table>
+                          <div class="h-10 w-1/5 mx-auto mt-8 text-center text-xl">
+                            <h2>Total: $1050</h2>
+                          </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="contenido h-full w-5/6 m-auto mt-8 py-8 px-6 text-justify text-gray-600 rounded-xl border border-gray-200 bg-white">
-                <p>Citerium es una solución intuitiva y eficiente diseñada para simplificar la gestión de ventas y el control de inventario para pequeños negocios. Con una interfaz fácil de usar y funciones clave para ingresar, editar, eliminar productos y realizar ventas de manera rápida y precisa.</p>
+                <div class="md:col-span-1 lg:col-span-1" >
+                    <div class="h-full lg:w-3/6 md:w-4/6 m-auto mt-3 py-8 px-6 text-center text-gray-600 rounded-xl border border-gray-200 bg-gradient-to-r from-indigo-100 to-cyan-100">
+                        <form id="ingresarProducto">
+                            <h1 class="text-2xl text-cyan-900">Producto</h1>
 
-                <p>Estas son las principales funciones que Citerium permite usar: </p>
-
-                <ul class="mt-3 mb-6">
-                    <li> <a href="homeInventario_SistemaPos.html"><u>Inventario</u></a> : Ingresar y Eliminar productos.</li>
-                    <li> <a href="homeProducto_SistemaPos.html"><u>Administrar productos</u></a> : Editar los productos que estan en inventario.</li>
-                    <li> <a href="homeVentas_SistemaPos.html"><u>Ventas</u></a> : Ingresar una cantidad de productos para su venta.</li>
-                </ul>
+                            <div>
+                                <div class="formularioInput">
+                                    <h3>Producto</h3>
+                                    <input type="text" name="producto" id="producto" placeholder="Queso" required>
+                                </div>
+                                <div class="formularioInput">   
+                                    <h3>Codigo de referencia</h3>
+                                    <input type="number" name="codigoReferencia" id="codigoReferencia" placeholder="13450048" required>
+                                </div>
+                                <div class="formularioInput">
+                                    <h3>Unidades</h3>
+                                    <input type="number" name="unidades" id="unidades" placeholder="5" required>
+                                </div>
+                            </div>
+                            <button class="flex m-auto w-1/4 justify-center rounded-md bg-lime-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-lime-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"" type="submit">Confirmar</button>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
